--- a/templates/layout.html
+++ b/templates/layout.html
@@ -18,27 +18,29 @@
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
         <div class="container">
-            <a class="navbar-brand fw-bold" href="/home">MediConnect</a>
+            <a class="navbar-brand fw-bold" href="{{ url_for('home') }}">MediConnect</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="#">Appointment</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Virtual Consultation</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Medical Records</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Pharmacy & Medicine</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Emergency AI Assistance</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Health Education</a></li>
+                    {% if 'loggedin' in session %}
+                        {% if session['role'] == 'patient' %}
+                            <li class="nav-item"><a class="nav-link" href="{{ url_for('appointments') }}">Appointments</a></li>
+                        {% elif session['role'] == 'doctor' %}
+                            <li class="nav-item"><a class="nav-link" href="{{ url_for('doctor_appointments') }}">Appointments</a></li>
+                        {% endif %}
+                        <li class="nav-item"><a class="nav-link" href="{{ url_for('profile') }}">Profile</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{{ url_for('logout') }}">Logout</a></li>
+                    {% else %}
+                        <li class="nav-item"><a class="nav-link" href="{{ url_for('login') }}">Login</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{{ url_for('register') }}">Sign up</a></li>
+                    {% endif %}
                 </ul>
-                <div class="d-flex ms-3">
-                    <a href="{{ url_for('login') }}" class="btn btn-outline-dark me-2">Login</a>
-                    <a href="{{ url_for('register') }}" class="btn btn-dark">Sign up</a>
-                </div>
             </div>
         </div>
     </nav>
-
+    
     <!-- Main Content -->
     <main class="flex-grow-1">
         <div class="container my-5">
