--- a/templates/manage_appointments.html
+++ b/templates/manage_appointments.html
@@ -1,8 +1,5 @@
-{% extends "layout.html" %}
-
-{% block content %}
 <div class="container my-5">
-    <h2 class="mb-4 text-center">My Appointments</h2>
+    <h2 class="mb-4 text-center">Manage Appointments</h2>
     {% if appointments %}
     <table class="table table-bordered text-center">
         <thead>
@@ -36,4 +33,3 @@
     <p class="text-center">No appointments found.</p>
     {% endif %}
 </div>
-{% endblock %}
