--- a/core/templates/core/doctor_profile_setup.html
+++ b/core/templates/core/doctor_profile_setup.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="container mt-5">
     <h2>Edit Your Profile</h2>
-    <form method="POST" action="">
+    <form method="POST">
         {{ form.hidden_tag() }}
         <div class="form-group">
             {{ form.gender.label(class="form-label") }}
@@ -39,7 +39,7 @@
             {{ form.available_timeslots.label(class="form-label") }}
             {{ form.available_timeslots(class="form-control") }}
         </div>
-        <button type="submit" class="btn btn-primary">Save Changes</button>
+        <button type="submit" class="btn btn-primary mt-3">Save Changes</button>
     </form>
 </div>
 {% endblock %}
