--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -22,9 +22,11 @@
             <p>✔ Find the nearest pharmacies</p>
             <p>✔ Get health updates and emergency assistance</p>
 
-            <!-- Logos of Healthcare Partners -->
+            <!-- Add a Search Pharmacies Button -->
+            <a href="/pharmacy/search_pharmacy" class="btn btn-outline-success m-1">🔍 Pharmacy</a>
+
+            <!-- Existing Buttons -->
             <a href="/hospitals" class="btn btn-outline-primary m-1">🏥 Hospitals</a>
-            <a href="/pharmacy" class="btn btn-outline-success m-1">💊 Pharmacy</a>
             <a href="/doctors" class="btn btn-outline-info m-1">👨‍⚕️ Doctor Network</a>
         </div>
         <div class="mt-5">
