--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -24,9 +24,8 @@
 
             <!-- Add a Search Pharmacies Button -->
             <a href="/pharmacy/search_pharmacy" class="btn btn-outline-success m-1">🔍 Pharmacy</a>
-
-            <!-- Existing Buttons -->
-            <a href="/hospitals" class="btn btn-outline-primary m-1">🏥 Hospitals</a>
+            <!-- Add a Search Hospitals Button -->
+            <a href="/hospitals/search_hospital" class="btn btn-outline-warning m-1">🏥 Hospital</a>
             <a href="/doctors" class="btn btn-outline-info m-1">👨‍⚕️ Doctor Network</a>
         </div>
         <div class="mt-5">
